# Tic-Tac-Toe

./: CMakeLists.txt  CMakePresets.json
cmake/: CompileOptions.cmake
include/client/: connection.h  error_handler.h  game.h
include/server/: connection.h  error_handler.h  game.h  recovery.h  synchronization.h
src/client/: CMakeLists.txt  client.c
src/client/libclient/: CMakeLists.txt  connection.c  error_handler.c  game.c
src/server/: CMakeLists.txt  server.c
src/server/libserver/: CMakeLists.txt  connection.c  error_handler.c  game.c  recovery.c  synchronization.c
